gen/com/cwlplugin/parser/CwlParser.java
// This is a generated file. Not intended for manual editing.
package com.cwlplugin.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;

import static com.cwlplugin.psi.CwlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class CwlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == COMMAND_INPUT_ARRAY_ITEMS) {
      r = command_input_array_items(b, 0);
    }
    else if (t == COMMAND_INPUT_ARRAY_SCHEMA) {
      r = command_input_array_schema(b, 0);
    }
    else if (t == COMMAND_INPUT_ARRAY_SCHEMA_ARRAY) {
      r = command_input_array_schema_array(b, 0);
    }
    else if (t == COMMAND_INPUT_ENUM_SCHEMA) {
      r = command_input_enum_schema(b, 0);
    }
    else if (t == COMMAND_INPUT_ENUM_SCHEMA_ARRAY) {
      r = command_input_enum_schema_array(b, 0);
    }
    else if (t == COMMAND_INPUT_PARAMETER_FIELD) {
      r = command_input_parameter_field(b, 0);
    }
    else if (t == COMMAND_INPUT_RECORD_FIELD) {
      r = command_input_record_field(b, 0);
    }
    else if (t == COMMAND_INPUT_RECORD_FIELD_TYPE) {
      r = command_input_record_field_type(b, 0);
    }
    else if (t == COMMAND_INPUT_RECORD_FIELDS) {
      r = command_input_record_fields(b, 0);
    }
    else if (t == COMMAND_INPUT_RECORD_SCHEMA_ARRAY) {
      r = command_input_record_schema_array(b, 0);
    }
    else if (t == COMMAND_LINE_BINDING_FIELD) {
      r = command_line_binding_field(b, 0);
    }
    else if (t == COMMAND_LINE_TOOL_FIELD) {
      r = command_line_tool_field(b, 0);
    }
    else if (t == COMMAND_OUTPUT_ARRAY_ITEMS) {
      r = command_output_array_items(b, 0);
    }
    else if (t == COMMAND_OUTPUT_ARRAY_SCHEMA) {
      r = command_output_array_schema(b, 0);
    }
    else if (t == COMMAND_OUTPUT_ARRAY_SCHEMA_ARRAY) {
      r = command_output_array_schema_array(b, 0);
    }
    else if (t == COMMAND_OUTPUT_BINDING) {
      r = command_output_binding(b, 0);
    }
    else if (t == COMMAND_OUTPUT_BINDING_FIELD) {
      r = command_output_binding_field(b, 0);
    }
    else if (t == COMMAND_OUTPUT_ENUM_SCHEMA) {
      r = command_output_enum_schema(b, 0);
    }
    else if (t == COMMAND_OUTPUT_ENUM_SCHEMA_ARRAY) {
      r = command_output_enum_schema_array(b, 0);
    }
    else if (t == COMMAND_OUTPUT_PARAMETER) {
      r = command_output_parameter(b, 0);
    }
    else if (t == COMMAND_OUTPUT_PARAMETER_FIELD) {
      r = command_output_parameter_field(b, 0);
    }
    else if (t == COMMAND_OUTPUT_RECORD_FIELD) {
      r = command_output_record_field(b, 0);
    }
    else if (t == COMMAND_OUTPUT_RECORD_FIELD_TYPE) {
      r = command_output_record_field_type(b, 0);
    }
    else if (t == COMMAND_OUTPUT_RECORD_FIELDS) {
      r = command_output_record_fields(b, 0);
    }
    else if (t == COMMAND_OUTPUT_RECORD_SCHEMA) {
      r = command_output_record_schema(b, 0);
    }
    else if (t == COMMAND_OUTPUT_RECORD_SCHEMA_ARRAY) {
      r = command_output_record_schema_array(b, 0);
    }
    else if (t == CWL_TYPE) {
      r = cwl_type(b, 0);
    }
    else if (t == CWL_TYPE_ARRAY) {
      r = cwl_type_array(b, 0);
    }
    else if (t == DIRECTORY) {
      r = directory(b, 0);
    }
    else if (t == DIRECTORY_ARRAY) {
      r = directory_array(b, 0);
    }
    else if (t == DIRECTORY_FIELD) {
      r = directory_field(b, 0);
    }
    else if (t == DIRENT) {
      r = dirent(b, 0);
    }
    else if (t == DIRENT_ARRAY) {
      r = dirent_array(b, 0);
    }
    else if (t == FILE) {
      r = file(b, 0);
    }
    else if (t == FILE_ARRAY) {
      r = file_array(b, 0);
    }
    else if (t == FILE_FIELD) {
      r = file_field(b, 0);
    }
    else if (t == INITIAL_WORKDIR_LISTING) {
      r = initial_workdir_listing(b, 0);
    }
    else if (t == INT_ARRAY) {
      r = int_array(b, 0);
    }
    else if (t == OUTPUT_BINDING) {
      r = output_binding(b, 0);
    }
    else if (t == PACKAGES) {
      r = packages(b, 0);
    }
    else if (t == RECORD_TYPE) {
      r = record_type(b, 0);
    }
    else if (t == REQUIREMENT) {
      r = requirement(b, 0);
    }
    else if (t == RESOURCE_REQUIREMENT_FIELD) {
      r = resource_requirement_field(b, 0);
    }
    else if (t == SOFTWARE_PACKAGE) {
      r = software_package(b, 0);
    }
    else if (t == SOFTWARE_PACKAGE_ARRAY) {
      r = software_package_array(b, 0);
    }
    else if (t == SYMBOLS) {
      r = symbols(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return cwl_file(b, l + 1);
  }

  /* ********************************************************** */
  // string_array | expression_array | command_line_binding_array
  static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = string_array(b, l + 1);
    if (!r) r = expression_array(b, l + 1);
    if (!r) r = command_line_binding_array(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TYPE COLON ARRAY_TYPE
  static boolean array_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type")) return false;
    if (!nextTokenIs(b, TYPE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TYPE, COLON, ARRAY_TYPE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BASECOMMAND COLON (STRING | string_array)
  static boolean base_command(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_command")) return false;
    if (!nextTokenIs(b, BASECOMMAND)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BASECOMMAND, COLON);
    r = r && base_command_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STRING | string_array
  private static boolean base_command_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_command_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRING);
    if (!r) r = string_array(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BASENAME COLON STRING
  static boolean basename(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basename")) return false;
    if (!nextTokenIs(b, BASENAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BASENAME, COLON, STRING);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CHECKSUM COLON STRING
  static boolean checksum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "checksum")) return false;
    if (!nextTokenIs(b, CHECKSUM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CHECKSUM, COLON, STRING);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // cwl_type
  //                           | command_input_enum_schema
  //                           | STRING
  //                           | cwl_type_array
  //                           | command_input_record_schema_array
  //                           | command_input_enum_schema_array
  //                           | command_input_array_schema_array
  //                           | string_array
  //                           | command_input_array_schema
  //                           | command_input_record_schema
  public static boolean command_input_array_items(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_array_items")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMAND_INPUT_ARRAY_ITEMS, "<command input array items>");
    r = cwl_type(b, l + 1);
    if (!r) r = command_input_enum_schema(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = cwl_type_array(b, l + 1);
    if (!r) r = command_input_record_schema_array(b, l + 1);
    if (!r) r = command_input_enum_schema_array(b, l + 1);
    if (!r) r = command_input_array_schema_array(b, l + 1);
    if (!r) r = string_array(b, l + 1);
    if (!r) r = command_input_array_schema(b, l + 1);
    if (!r) r = command_input_record_schema(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // array_type | label | input_binding | command_input_array_items
  public static boolean command_input_array_schema(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_array_schema")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMAND_INPUT_ARRAY_SCHEMA, "<command input array schema>");
    r = array_type(b, l + 1);
    if (!r) r = label(b, l + 1);
    if (!r) r = input_binding(b, l + 1);
    if (!r) r = command_input_array_items(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET (command_input_array_schema COMMA) * command_input_array_schema RBRACKET
  public static boolean command_input_array_schema_array(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_array_schema_array")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && command_input_array_schema_array_1(b, l + 1);
    r = r && command_input_array_schema(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, COMMAND_INPUT_ARRAY_SCHEMA_ARRAY, r);
    return r;
  }

  // (command_input_array_schema COMMA) *
  private static boolean command_input_array_schema_array_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_array_schema_array_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!command_input_array_schema_array_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_input_array_schema_array_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // command_input_array_schema COMMA
  private static boolean command_input_array_schema_array_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_array_schema_array_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_input_array_schema(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // symbols | enum_type | label | input_binding
  public static boolean command_input_enum_schema(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_enum_schema")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMAND_INPUT_ENUM_SCHEMA, "<command input enum schema>");
    r = symbols(b, l + 1);
    if (!r) r = enum_type(b, l + 1);
    if (!r) r = label(b, l + 1);
    if (!r) r = input_binding(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET (command_input_enum_schema COMMA) * command_input_enum_schema RBRACKET
  public static boolean command_input_enum_schema_array(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_enum_schema_array")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && command_input_enum_schema_array_1(b, l + 1);
    r = r && command_input_enum_schema(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, COMMAND_INPUT_ENUM_SCHEMA_ARRAY, r);
    return r;
  }

  // (command_input_enum_schema COMMA) *
  private static boolean command_input_enum_schema_array_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_enum_schema_array_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!command_input_enum_schema_array_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_input_enum_schema_array_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // command_input_enum_schema COMMA
  private static boolean command_input_enum_schema_array_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_enum_schema_array_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_input_enum_schema(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER COLON INDENT command_input_parameter_field + DEDENT
  static boolean command_input_parameter(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_parameter")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IDENTIFIER, COLON, INDENT);
    r = r && command_input_parameter_3(b, l + 1);
    r = r && consumeToken(b, DEDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // command_input_parameter_field +
  private static boolean command_input_parameter_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_parameter_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_input_parameter_field(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!command_input_parameter_field(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_input_parameter_3", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // default | doc | format | id | input_binding | label | secondary_files | streamable | type
  public static boolean command_input_parameter_field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_parameter_field")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMAND_INPUT_PARAMETER_FIELD, "<command input parameter field>");
    r = default_$(b, l + 1);
    if (!r) r = doc(b, l + 1);
    if (!r) r = format(b, l + 1);
    if (!r) r = id(b, l + 1);
    if (!r) r = input_binding(b, l + 1);
    if (!r) r = label(b, l + 1);
    if (!r) r = secondary_files(b, l + 1);
    if (!r) r = streamable(b, l + 1);
    if (!r) r = type(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // name | doc | input_binding | label | command_input_record_field_type
  public static boolean command_input_record_field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_input_record_field")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMAND_INPUT_RECORD_FIELD, "<command input record field>");
    r = name(b, l + 1);
    if (!r) r = doc(b, l + 1);
    if (!r) r = input_binding(b, l + 1);
    if (!r) r = label(b, l + 1);
    if (!r) r = command_input_record_field_type(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
